Revert "Fixes #239 z-index changed in search-bar on homepage (#241)"
This reverts commit 4ebf52d32661686bbb44163715554d510bc91418.

--- a/src/app/search-bar/search-bar.component.css
+++ b/src/app/search-bar/search-bar.component.css
@@ -26,7 +26,6 @@
   box-shadow: none;
   padding-left: 16px;
   font-family: Arial, sans-serif;
-  z-index: -1;
 }
 
 #nav-button{
@@ -36,7 +35,6 @@
   color: #0066ff;
   box-shadow: none;
   border: none;
-  z-index: -1;
 }
 
 #nav-group{
